--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1208,7 +1208,7 @@ var _image = (async function(){
 	
 	}
 	
-	console.log()
+	console.log(j_image)
 	
 	function getImage(xhttp){
 			//var result = xhttp.response;
