--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1172,6 +1172,7 @@ var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 
 var account_address = [];
 
+var j_image;
 
 function image_path(){
 var _image = (async function(){
@@ -1189,8 +1190,7 @@ var _image = (async function(){
 
 
 	var image = await image_and_name(contract_ID1, tokenID, getImage);
-	var image1 = j_image
-	console.log(image1)
+	
 	//console.log(image);
 	//var newDiv = document.createElement('img');
 	//newDiv.id = 'rs'+i + j;
@@ -1201,10 +1201,14 @@ var _image = (async function(){
 	//newDiv.addEventListener("load", "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))");
 	//chat.appendChild(newDiv);
 	//ew1Div.addEventListener("load", getImage);
+	
 	return 1
 	
 	})()
+	
 	}
+	
+	console.log(j_image)
 	
 	function getImage(xhttp){
 			//var result = xhttp.response;
@@ -1225,8 +1229,9 @@ var _image = (async function(){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
             img.src = image_
-            //ew1Div.appendChild(img);
 			j_image = image_
+            //ew1Div.appendChild(img);
+			
 			
 			return 1
 			
