--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1190,7 +1190,7 @@ var _image = (async function(){
 
 
 	var image = await image_and_name(contract_ID1, tokenID, getImage);
-	
+	var image1 = document.getElementById("content").value;
 	//console.log(image);
 	//var newDiv = document.createElement('img');
 	//newDiv.id = 'rs'+i + j;
