--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -163,8 +163,8 @@ display: block;
 
 <input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="image_path()"/>	
 
-<div id="content"></div>
-
+<div id="content1"></div>
+<div id="content2"></div>
 
 
 
@@ -1172,7 +1172,7 @@ var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 
 var account_address = [];
 
-var j_image;
+
 
 function image_path(){
 var _image = (async function(){
@@ -1190,7 +1190,7 @@ var _image = (async function(){
 
 
 	var image = await image_and_name(contract_ID1, tokenID, getImage);
-	var image1 = document.getElementById("content").value;
+	var image = await image_and_name(loan_amt, loan_term, getImage1);
 	//console.log(image);
 	//var newDiv = document.createElement('img');
 	//newDiv.id = 'rs'+i + j;
@@ -1201,7 +1201,7 @@ var _image = (async function(){
 	//newDiv.addEventListener("load", "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))");
 	//chat.appendChild(newDiv);
 	//ew1Div.addEventListener("load", getImage);
-	console.log(image1)
+	
 	return 1
 	
 	})()
@@ -1229,7 +1229,7 @@ var _image = (async function(){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
             img.src = image_
-			document.getElementById("content").innerHTML = image_
+			document.getElementById("content1").innerHTML = image_
             //ew1Div.appendChild(img);
 			
 			
@@ -1239,6 +1239,34 @@ var _image = (async function(){
 	
 	}
 	
+	function getImage1(xhttp){
+			//var result = xhttp.response;
+			
+			var result = xhttp.response;
+			
+			JSONresult = JSON.parse(result);
+			
+			//JSONresult = result
+			
+			//console.log(JSONresult.image);
+			//var result1 = JSONresult.image
+			//return result1
+			var image_ = JSONresult.image
+			var img = new Image();
+			//'https://ipfs.io/ipfs/' + lnk.slice(7)
+			if (JSONresult.image.substring(0,4) == "ipfs"){
+			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
+			}
+            img.src = image_
+			document.getElementById("content2").innerHTML = image_
+            //ew1Div.appendChild(img);
+			
+			
+			return image_
+			
+			
+	
+	}
 	
 	
 	
