--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1181,21 +1181,24 @@ var display = (async function(){
 			//console.log(JSONresult.image);
 			//var result1 = JSONresult.image
 			//return result1
-			var image_ = JSONresult.image
-			var img = new Image();
+			//var image_ = JSONresult.image
+			//var img = new Image();
 			//'https://ipfs.io/ipfs/' + lnk.slice(7)
 			if (JSONresult.image.substring(0,4) == "ipfs"){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
-            img.src = image_
-            ew1Div.appendChild(img);
+            //img.src = image_
+            //ew1Div.appendChild(img);
 			return 1
 			
 			
 	
 	}
 	
-	
+	var _image = await contract_bal.methods.tokens_image1xy(i, address, j).call();
+	var img = new Image;
+	img.src = _image;
+	ew1Div.appendChild(img);
 	
 	var newDiv = document.createElement('div');
 	newDiv.id = 's'+i + j;
