--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1366,8 +1366,8 @@ localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").v
 	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
 	localStorage.setItem("NFT_contract2", document.getElementById("NFT_contract2").value);
 	localStorage.setItem("NFT_Token_ID2", document.getElementById("NFT_Token_ID2").value);
-	localStorage.setItem("content1", document.getElementById("NFT_contract2").value);
-	localStorage.setItem("content2", document.getElementById("NFT_Token_ID2").value);
+	localStorage.setItem("content1", document.getElementById("content1").value);
+	localStorage.setItem("content2", document.getElementById("content2").value);
 	//localStorage.setItem("mySharedData", document.getElementById("password").value);
 	
 	var nft_k = localStorage.getItem("NFT_contract1");
