--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -118,7 +118,7 @@ display: block;
 
 </div>
 
-<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="image_path()"/>	
+<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="loan_request()"/>	
 
 <div id="content1"></div>
 <div id="content2"></div>
@@ -1556,7 +1556,7 @@ var acct = (async function(){
 
 })()
 
-	loan_request();
+	//loan_request();
 	
 }
 
