--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1395,17 +1395,19 @@ var acct = (async function(){
 	console.log(nft_id);
 	console.log(loan_amt);
 	console.log(loan_term);
- 	var contract = web3.utils.toChecksumAddress(nft_k);
+	console.log(img1);
+	console.log(img2);
+ 	<!-- var contract = web3.utils.toChecksumAddress(nft_k); -->
 	
-        var _data = new web3.eth.Contract(abi, contract_address).methods.offer_trade(contract, nft_id, loan_amt, loan_term, _n, img1, img2).encodeABI();
-        var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-        var account = accounts[0];
-	var result = await web3.eth.getTransactionCount(account)
-	_nonce = result
-        console.log(account)
+        <!-- var _data = new web3.eth.Contract(abi, contract_address).methods.offer_trade(contract, nft_id, loan_amt, loan_term, _n, img1, img2).encodeABI(); -->
+        <!-- var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' }); -->
+        <!-- var account = accounts[0]; -->
+	<!-- var result = await web3.eth.getTransactionCount(account) -->
+	<!-- _nonce = result -->
+        <!-- console.log(account) -->
 		
-	await web3.eth.sendTransaction({'gas': web3.utils.toHex(500000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 100000001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
-         //window.ethereum.on('accountsChanged', function (accounts) {
+	<!-- await web3.eth.sendTransaction({'gas': web3.utils.toHex(500000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 100000001, 'nonce': web3.utils.toHex(_nonce),'data': _data}) -->
+         <!-- //window.ethereum.on('accountsChanged', function (accounts) { -->
             // Time to reload your interface with accounts[0]!
             //console.log(accounts[0])
            	
