--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1159,7 +1159,7 @@ var _image = (async function(){
 	//chat.appendChild(newDiv);
 	//ew1Div.addEventListener("load", getImage);
 	
-	return 1
+	//return 1
 	
 	})()
 	
@@ -1191,7 +1191,7 @@ var _image = (async function(){
             //ew1Div.appendChild(img);
 			
 			
-			//return image_
+			return 1
 			
 			
 	
@@ -1221,7 +1221,7 @@ var _image = (async function(){
             //ew1Div.appendChild(img);
 			
 			to_approve()
-			//return image_
+			return 1
 			
 			
 	
