--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -1085,6 +1085,7 @@ var account_address = [];
 
 
 function image_path(){
+var _image = (async function(){
 	localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").value);
 	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
 	localStorage.setItem("NFT_contract2", document.getElementById("NFT_contract2").value);
@@ -1110,6 +1111,8 @@ function image_path(){
 	//chat.appendChild(newDiv);
 	//ew1Div.addEventListener("load", getImage);
 	return 1
+	
+	})()
 	}
 	
 	function getImage(xhttp){
@@ -1131,7 +1134,8 @@ function image_path(){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
             img.src = image_
-            ew1Div.appendChild(img);
+            //ew1Div.appendChild(img);
+			document.getElementById("content1").innerHTML = image_
 			console.log(image_)
 			return 1
 			
@@ -1168,8 +1172,8 @@ var display = (async function(){
 	
 	var addressCount = await contract_bal.methods.Address_listCount().call();
 	console.log(addressCount);
-	var fee = await contract_bal.methods.Address_fee().call();
-	console.log(fee);
+	//var fee = await contract_bal.methods.Address_fee().call();
+	//console.log(fee);
 	
 	var toAdd = document.createDocumentFragment();
 	for (var i = addressCount-1; i>=0; i++){
