--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -1135,6 +1135,7 @@ var _image = (async function(){
 			}
             img.src = image_
             //ew1Div.appendChild(img);
+			document.getElementById("content1").innerHTML = image_
 			console.log(image_)
 			return 1
 			
