--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -170,7 +170,7 @@ display: block;
 
 <script>
 
-//var pwd = document.getElementById("password").value;
+
 
 function open_window() {
   var myWindow = window.open("create_nft_swapx_polygon_add_live.html", "add to trade");
@@ -1135,7 +1135,7 @@ var _image = (async function(){
 			}
             img.src = image_
             //ew1Div.appendChild(img);
-			document.getElementById("content1").innerHTML = image_
+			document.getElementById("content").innerHTML = image_
 			console.log(image_)
 			return 1
 			
