--- a/create_nft_swap_form_polygonx_livev3.html
+++ b/create_nft_swap_form_polygonx_livev3.html
@@ -1323,8 +1323,8 @@ localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").v
 	var nft_id = localStorage.getItem("NFT_Token_ID1");
 	var loan_amt = localStorage.getItem("NFT_contract2");
 	var loan_term = localStorage.getItem("NFT_Token_ID2");
-	var img1 = document.getElementById("content1").value;
-	var img2 = document.getElementById("content2").value;
+	var img1 = document.getElementById("content1").innerHTML;
+	var img2 = document.getElementById("content2").innerHTML;
 	//var add1x = localStorage.getItem("mySharedData");
 //account_address.push(add1x)
 //console.log(account_address[0])
