--- a/create_nft_swap_form_polygonx_livev3.html
+++ b/create_nft_swap_form_polygonx_livev3.html
@@ -1075,7 +1075,7 @@ var abi = [
 	//localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-var contract_address = web3.utils.toChecksumAddress("0x362796183ce6fb4e2215aa6ea57aadbc56b6a870")
+var contract_address = web3.utils.toChecksumAddress("0xd4ba547282a909afc9b4c58c9f4777a34a8582eb")
 
 var contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -1346,16 +1346,16 @@ var acct = (async function(){
 	console.log(loan_term);
 	console.log(img1);
 	console.log(img2);
- 	//var contract = web3.utils.toChecksumAddress(nft_k);
+ 	var contract = web3.utils.toChecksumAddress(nft_k);
 	
-        //var _data = new web3.eth.Contract(abi, contract_address).methods.offer_trade(contract, nft_id, loan_amt, loan_term, _n, img1, img2).encodeABI();
-        //var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-        //var account = accounts[0];
-	//var result = await web3.eth.getTransactionCount(account)
-	//_nonce = result
-        //console.log(account)
+        var _data = new web3.eth.Contract(abi, contract_address).methods.offer_trade(contract, nft_id, loan_amt, loan_term, _n, img1, img2).encodeABI();
+        var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+        var account = accounts[0];
+	var result = await web3.eth.getTransactionCount(account)
+	_nonce = result
+        console.log(account)
 		
-	//await web3.eth.sendTransaction({'gas': web3.utils.toHex(500000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 100000001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
+	await web3.eth.sendTransaction({'gas': web3.utils.toHex(500000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 100000001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
          //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
             //console.log(accounts[0])
@@ -1489,7 +1489,7 @@ var acct = (async function(){
 	//var add1x = localStorage.getItem("mySharedData");
 	
  	var contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x362796183ce6fb4e2215aa6ea57aadbc56b6a870", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0xd4ba547282a909afc9b4c58c9f4777a34a8582eb", nft_id).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
