--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -87,6 +87,15 @@ font-size: large;
 
 <body>
 <img id="logo" src=logoCapture.PNG></img>
+<Button
+          onClick={() => {
+            // this is logging.
+            console.log("clicked to send request to Metamask");
+            connect(); // <===
+          }}
+        >
+          Connect
+        </Button>
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
 
@@ -107,16 +116,16 @@ function open_window() {
 }             
 
 
-var metamask = (async function(){
+//var metamask = (async function(){
   	
-  await ethereum.enable();
+  //await ethereum.enable();
   	
   
   //alert(balance)
 
-})()
+//})()
 
-sleep(200);
+//sleep(200);
 web3 = new Web3(web3.currentProvider);        
 
 //var web3 = new Web3(new Web3.providers.HttpProvider(
@@ -1090,7 +1099,11 @@ const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 const account_address = [];
 
 
-
+const connect = () => {
+    provider.request({ method: "eth_requestAccounts" })
+         .then(response => console.log(response)
+         .catch(err => console.log(err)
+  };
 
 
 
