--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -87,13 +87,7 @@ font-size: large;
 
 <body>
 <img id="logo" src=logoCapture.PNG></img>
-<Button
-          onClick={() => {
-            // this is logging.
-            console.log("clicked to send request to Metamask");
-            connect(); // <===
-          }}
-        >
+<Button onClick="connect()" >
           Connect
         </Button>
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
@@ -1099,7 +1093,7 @@ const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 const account_address = [];
 
 
-const connect = () => {
+function connect(){
     provider.request({ method: "eth_requestAccounts" })
          .then(response => console.log(response)
          .catch(err => console.log(err)
