--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -6,6 +6,7 @@
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/master/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.js"></script>
+
 </script> 
   
 
@@ -110,14 +111,14 @@ function open_window() {
 }             
 
 
-//var metamask = (async function(){
+var metamask = (async function(){
   	
-  //await ethereum.enable();
+  await ethereum.enable();
   	
   
   //alert(balance)
 
-//})()
+})()
 
 //sleep(200);
 function connect(){
