--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1235,7 +1235,7 @@ var display = (async function(){
 	ewDiv.appendChild(ew2Div);
 	for (j=0;j<contract_length1;j++){ 
 	
-	//var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i, address, j).call();
+	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i, address, j).call();
 	//console.log("array_contract: " + contract_ID2 + "no# " + i + ' ' + j)
 	//array_contract_ID2.push("'" + contract_ID2 + "'");
 	
