--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1257,7 +1257,7 @@ var display = (async function(){
 	
 	
 	
-	//var tokenID2 = await contract_bal.methods.tokens_list2xy(i, address, j).call();
+	var tokenID2 = await contract_bal.methods.tokens_list2xy(i, address, j).call();
 	//console.log("array_token: " + tokenID2)
 	array_tokenID2.push(tokenID2);
 	//document.getElementById("loan_obligation").innerHTML = "Loan is already made is " + obligation;
