--- a/test_resize.html
+++ b/test_resize.html
@@ -17,11 +17,11 @@ var form = document.getElementById('form');
 var file = fileinput
 function processfile(file) {
   
-    if( !( /image/i ).test( file.type ) )
-        {
-            alert( "File "+ file.name +" is not an image." );
-            return false;
-        }
+    <!-- if( !( /image/i ).test( file.type ) ) -->
+        <!-- { -->
+            <!-- alert( "File "+ file.name +" is not an image." ); -->
+            <!-- return false; -->
+        <!-- } -->
 
     // read the files
     var reader = new FileReader();
