--- a/test_resize.html
+++ b/test_resize.html
@@ -36,7 +36,7 @@ fetch('https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzH
 
     // Here, I use it to make an image appear on the page
     let objectURL = URL.createObjectURL(blob);
-    processfile(objectURL);
+    processfile(blob);
 	let myImage = new Image();
     myImage.src = objectURL;
     //document.getElementById('myImg').appendChild(myImage)
